nginx/service.yml
kind: Service
apiVersion: v1
metadata:
  name: nginx-service
  namespace: nginx2

spec:
  selector:
    app: nginx
  ports: 
  - protocol: TCP
    targetPort: 80
    port: 80
  type: ClusterIP
